[package]
name = "llrv"
version = "0.1.0"
authors = ["Brian L. Troutwine <blt@postmates.com>"]

[dependencies]
byteorder = "1.0"
clap = "2.29"
lazy_static = "0.2"
protobuf = "1.4"
rand = "0.3.18"

[profile.release]
lto = true

[[bin]]
name = "native_listener"

[[bin]]
name = "native_emitter"

[[bin]]
name = "log_gen"

[[bin]]
name = "llrv"
